# waiter-trait

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: counter.rs  impls.rs  lib.rs  non_interval.rs  prelude.rs  std_impls.rs  tick_delay.rs  tick_waiter.rs  timed_tick_waiter.rs
