[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    categories = ["embedded", "no-std"]
    description = "Traits used to wait and timeout."
    documentation = "https://docs.rs/waiter-trait"
    edition = "2024"
    license = "MIT OR Apache-2.0"
    name = "waiter-trait"
    readme = "README.md"
    version = "0.1.0"

    [package.metadata.docs.rs]
        features = ["std"]

[features]
    std = []
